# boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.txt  pyproject.toml  run.sh
config/: config.json  config.yaml
data/: data.csv
src/boilerplate/: api.py  main.py  schemas.py  utilities.py
