[project]
name = "boilerplate"
version = "0.1.0"
description = "Boilerplate scaffold for Python projects"
authors = [
    {name = "Amine Laghaout",email = "aknary@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
